// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerticalTimelineElement should render correctly in Debug 1`] = `
<div
  className="vertical-timeline-element vertical-timeline-element--no-children"
  id=""
  style={null}
>
  <VisibilitySensor
    active={true}
    containment={null}
    delayedCall={false}
    intervalCheck={true}
    intervalDelay={100}
    minTopValue={0}
    offset={
      Object {
        "bottom": 80,
      }
    }
    onChange={[Function]}
    partialVisibility={true}
    resizeCheck={false}
    resizeDelay={250}
    resizeThrottle={-1}
    scrollCheck={false}
    scrollDelay={250}
    scrollThrottle={-1}
  >
    <div>
      <span
        className="vertical-timeline-element-icon is-hidden"
        onClick={null}
        style={null}
      />
      <div
        className="vertical-timeline-element-content is-hidden"
      >
        <span
          className="vertical-timeline-element-date"
        />
      </div>
    </div>
  </VisibilitySensor>
</div>
`;

exports[`VerticalTimelineElement should render correctly without props 1`] = `
<div
  className="vertical-timeline-element vertical-timeline-element--no-children"
  id=""
  style={null}
>
  <VisibilitySensor
    active={true}
    containment={null}
    delayedCall={false}
    intervalCheck={true}
    intervalDelay={100}
    minTopValue={0}
    offset={
      Object {
        "bottom": 80,
      }
    }
    onChange={[Function]}
    partialVisibility={true}
    resizeCheck={false}
    resizeDelay={250}
    resizeThrottle={-1}
    scrollCheck={false}
    scrollDelay={250}
    scrollThrottle={-1}
  >
    <div>
      <span
        className="vertical-timeline-element-icon is-hidden"
        onClick={null}
        style={null}
      />
      <div
        className="vertical-timeline-element-content is-hidden"
      >
        <span
          className="vertical-timeline-element-date"
        />
      </div>
    </div>
  </VisibilitySensor>
</div>
`;

exports[`VerticalTimelineElement should render date 1`] = `
<div
  className="vertical-timeline-element vertical-timeline-element--no-children"
  id=""
  style={null}
>
  <VisibilitySensor
    active={true}
    containment={null}
    delayedCall={false}
    intervalCheck={true}
    intervalDelay={100}
    minTopValue={0}
    offset={
      Object {
        "bottom": 80,
      }
    }
    onChange={[Function]}
    partialVisibility={true}
    resizeCheck={false}
    resizeDelay={250}
    resizeThrottle={-1}
    scrollCheck={false}
    scrollDelay={250}
    scrollThrottle={-1}
  >
    <div>
      <span
        className="vertical-timeline-element-icon is-hidden"
        onClick={null}
        style={null}
      />
      <div
        className="vertical-timeline-element-content is-hidden"
      >
        <span
          className="vertical-timeline-element-date"
        >
          Oct 10
        </span>
      </div>
    </div>
  </VisibilitySensor>
</div>
`;

exports[`VerticalTimelineElement should render icon with correct styles 1`] = `
<div
  className="vertical-timeline-element vertical-timeline-element--no-children"
  id=""
  style={null}
>
  <VisibilitySensor
    active={true}
    containment={null}
    delayedCall={false}
    intervalCheck={true}
    intervalDelay={100}
    minTopValue={0}
    offset={
      Object {
        "bottom": 80,
      }
    }
    onChange={[Function]}
    partialVisibility={true}
    resizeCheck={false}
    resizeDelay={250}
    resizeThrottle={-1}
    scrollCheck={false}
    scrollDelay={250}
    scrollThrottle={-1}
  >
    <div>
      <span
        className="vertical-timeline-element-icon is-hidden"
        onClick={null}
        style={null}
      >
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Array [
              "fab",
              "node-js",
            ]
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          symbol={false}
          title=""
          transform={null}
        />
      </span>
      <div
        className="vertical-timeline-element-content is-hidden"
      >
        <span
          className="vertical-timeline-element-date"
        />
      </div>
    </div>
  </VisibilitySensor>
</div>
`;
